Boon now button padding fix on Mobile

--- a/_sass/pages/_rooms.scss
+++ b/_sass/pages/_rooms.scss
@@ -58,8 +58,14 @@
 
     .ttweb-booking-button {
       @extend .btn--secondary;
-      margin-left: 24px;
+      margin-top: 10px;
+      margin-left: 0;
       background-color: transparent !important;
+
+      @include media-breakpoint-up(md) {
+        margin-top: 0;
+        margin-left: 24px;
+      }
     }
 
     .ttweb-cross-out-rate {
